--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .phpunit.result.cache
-/storage
+/storage/framework/sessions
+/storage/framework/views
+/storage/framework/cache
+/storage/app
+/storage/logs
