--- a/composer.json
+++ b/composer.json
@@ -63,10 +63,7 @@
             "chmod -R 755 public/",
             "chmod -R 755 storage/framework",
             "chmod -R 755 bootstrap/cache",
-            "php artisan config:cache",
-            "mkdir -p storage/framework/sessions",
-            "mkdir -p storage/framework/views",
-            "mkdir -p storage/framework/cache"
+            "php artisan config:cache"
         ]
     },
     "config": {
