--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
             "chmod -R 755 public/",
             "chmod -R 755 storage/framework",
             "chmod -R 755 bootstrap/cache",
-            "php artisan config:cache"
+            "@php artisan config:cache"
         ]
     },
     "config": {
