--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .phpunit.result.cache
-/storage/framework/sessions
-/storage/framework/views
-/storage/framework/cache
-/storage/app
-/storage/logs
+/storage/framework/sessions/*
+/storage/framework/views/*
+/storage/framework/cache/*
+/storage/app/*
+/storage/logs/*
